Modified to adjust spacing between forms and added missing elements closers.  (#4)
* Changed caughtDate typing to date, rather than date-time. Added missing closing elements. Added spacing between Form dividers.

* Added closing elements. Added spacing between forms.

* Added closing elements. Added spacing between forms.

* Added closing elements. Added spacing between forms.

--- a/people.html
+++ b/people.html
@@ -107,6 +107,7 @@
                     </table>
                     <p>&nbsp;</p>
                     </div> <!-- browse -->
+                    
                     <div id="insert" style="display: none">
                         <form method="POST" id="addPerson">
                             <legend><strong>Add Person</strong></legend>
@@ -165,6 +166,7 @@
                         </p>
                             </form> 
                     </div><!-- delete -->
+                   </article></section>
                 </main>
 <footer>© 2024 - Elena Parapounsky & Amy Xu</footer>    
 </body>    
