--- a/pokemon.html
+++ b/pokemon.html
@@ -127,6 +127,7 @@
                     </table>
                     <p>&nbsp;</p>
                     </div> <!-- browse -->
+                    
                     <div id="insert" style="display: none">
                         <form method="POST" id="addPokemon">
                             <legend><strong>Add Pokemon</strong></legend>
@@ -152,6 +153,7 @@
                               </p>
                             </form> 
                     </div><!-- insert -->
+
                     <p>&nbsp;</p>
                     <div id="update" style="display: none">
                         <form method="POST" id="updatePokemon">
@@ -179,6 +181,7 @@
                               <button type="button" onClick="browsePokemon()">Cancel</button></p>
                             </form> 
                     </div><!-- update -->
+
                     <p>&nbsp;</p>
                     <div id="delete" style="display: none">
                       <form method="POST" id="deletePokemon">
@@ -197,6 +200,7 @@
                         </p>
                             </form> 
                     </div><!-- delete -->
+                  </article></section>
                 </main>
 <footer>© 2024 - Elena Parapounsky & Amy Xu</footer>    
 </body>    
