--- a/pokemontypes.html
+++ b/pokemontypes.html
@@ -115,6 +115,7 @@
                     </table>
                     <p>&nbsp;</p>
                     </div> <!-- browse -->
+                    
                     <div id="insert" style="display: none">
                         <form method="POST" id="addPokeType">
                             <legend><strong>Add a Pokemon and their typing</strong></legend>
@@ -144,6 +145,7 @@
                               </p>
                             </form> 
                     </div><!-- insert -->
+
                     <p>&nbsp;</p>
                     <div id="update" style="display: none">
                         <form method="POST" id="updatePokeType">
@@ -173,6 +175,7 @@
                               <button type="button" onClick="browsePokeType()">Cancel</button></p>
                             </form> 
                     </div><!-- update -->
+
                     <p>&nbsp;</p>
                     <div id="delete" style="display: none">
                       <form method="POST" id="deletePokeType">
@@ -191,6 +194,7 @@
                         </p>
                             </form> 
                     </div><!-- delete -->
+                </article></section>
                 </main>
 <footer>© 2024 - Elena Parapounsky & Amy Xu</footer>    
 </body>    
