fixed errors in affiliations.html; added CRUD operations for Types page

--- a/affiliations.html
+++ b/affiliations.html
@@ -95,24 +95,24 @@
                         <td>Team Rocket</td>
                         <td>Agent</td>
                         <td>Villainous organization</td>
-                        <td><a href="#" onClick="updateAffiliation('this.personID')">Edit</a></td>
-                        <td><a href="#" onclick="deleteAffiliation('this.personID')">Delete</a></td>
+                        <td><a href="#" onClick="updateAffiliation('this.affiliationID')">Edit</a></td>
+                        <td><a href="#" onclick="deleteAffiliation('this.affiliationID')">Delete</a></td>
                     </tr>
                     <tr>
                         <td align="right" >2</td>
                         <td>Trainer</td>
                         <td>Gym Leader</td>
                         <td>Elite trainers</td>
-                        <td><a href="#" onClick="updateAffiliation('this.personID')">Edit</a></td>
-                        <td><a href="#" onclick="deleteAffiliation('this.personID')">Delete</a></td>
+                        <td><a href="#" onClick="updateAffiliation('this.affiliationID')">Edit</a></td>
+                        <td><a href="#" onclick="deleteAffiliation('this.affiliationID')">Delete</a></td>
                     </tr>
                     <tr>
                         <td align="right" >3</td>
                         <td>Trainer</td>
                         <td>Apprentice</td>
                         <td>Standard trainers</td>
-                        <td><a href="#" onClick="updateAffiliation('this.personID')">Edit</a></td>
-                        <td><a href="#" onclick="deleteAffiliation('this.personID')">Delete</a></td>
+                        <td><a href="#" onClick="updateAffiliation('this.affiliationID')">Edit</a></td>
+                        <td><a href="#" onclick="deleteAffiliation('this.affiliationID')">Delete</a></td>
                     </tr>
                 </table>
             </div> <!-- browse -->
