fixed errors in types.html; added CRUD operations for Battles page

--- a/types.html
+++ b/types.html
@@ -170,7 +170,7 @@
                 <form method="POST" id="updateType">
                     <legend><strong>Update Type</strong></legend>
                       <fieldset class="fields">
-                      <input type="hidden" name="affiliationID" id="updateAffiliationID" value="1">
+                      <input type="hidden" name="typeID" id="updateTypeID" value="1">
                         <label> ID#: </label>  1
                         <br>
                         <label> Type Name </label> <input type="text" name="typeName">
@@ -205,6 +205,6 @@
               </div><!-- delete -->
         </section>
      </main>
-
+<footer>© 2024 - Elena Parapounsky & Amy Xu</footer> 
 </body>
 </html>
