fixed errors in battles.html & types.html; added CRUD operations for Player Battles page

--- a/battles.html
+++ b/battles.html
@@ -71,7 +71,7 @@
         <section>
             <h2>Battles</h2>
 
-            <article id = "affiliations">
+            <article id = "battles">
                 <p id = "center">
                     Keep track of battles that have taken place
                 </p>
