--- a/types.html
+++ b/types.html
@@ -71,7 +71,7 @@
         <section>
             <h2>Types</h2>
 
-            <article id = "affiliations">
+            <article id = "types">
                 <p id = "center">
                     Categories of Pokemon types
                 </p>
@@ -160,8 +160,8 @@
                         <label> Strong Against </label> <input type="text" name="strongAgainst">
                         <br>
                   </fieldset><p id ="center">
-                      <button type="submit" id="addAffiliation">Add Type</button>
-                      <button type="button" onClick="browseAffiliation()">Cancel</button>
+                      <button type="submit" id="addType">Add Type</button>
+                      <button type="button" onClick="browseType()">Cancel</button>
                       </p>
                     </form> 
             </div><!-- insert -->
