added spacing for insert/update forms on Affiliations page

--- a/affiliations.html
+++ b/affiliations.html
@@ -121,11 +121,11 @@
                 <form method="POST" id="addAffiliation">
                     <legend><strong>Add Affiliation</strong></legend>
                       <fieldset class="fields">
-                        <label> Affiliation Type </label> <input type="text" name="affiliationType">
+                        <label> Affiliation Type </label> <input type="text" name="affiliationType" style="margin-bottom: 10px">
                         <br>
-                        <label> Affiliation Rank </label> <input type="text" name="affiliationRank">
+                        <label> Affiliation Rank </label> <input type="text" name="affiliationRank" style="margin-bottom: 10px">
                         <br>
-                        <label> Type Description </label> <input type="text" name="typeDescription">
+                        <label> Type Description </label> <input type="text" name="typeDescription" style="margin-bottom: 10px">
                         <br>
                   </fieldset><p id ="center">
                       <button type="submit" id="addAffiliation">Add Affiliation</button>
@@ -141,11 +141,11 @@
                       <input type="hidden" name="affiliationID" id="updateAffiliationID" value="1">
                         <label> ID#: </label>  1
                         <br>
-                        <label> Affiliation Type </label> <input type="text" name="affiliationType">
+                        <label> Affiliation Type </label> <input type="text" name="affiliationType" style="margin-bottom: 10px">
                         <br>
-                        <label> Affiliation Rank </label> <input type="text" name="affiliationRank">
+                        <label> Affiliation Rank </label> <input type="text" name="affiliationRank" style="margin-bottom: 10px">
                         <br>
-                        <label> Type Description </label> <input type="text" name="typeDescription">
+                        <label> Type Description </label> <input type="text" name="typeDescription" style="margin-bottom: 10px">
                         <br>
                   </fieldset>
                   <p id = "center">
