added spacing for insert/update forms for Types page

--- a/types.html
+++ b/types.html
@@ -153,11 +153,11 @@
                 <form method="POST" id="addType">
                     <legend><strong>Add Type</strong></legend>
                       <fieldset class="fields">
-                        <label> Type Name </label> <input type="text" name="typeName">
+                        <label> Type Name </label> <input type="text" name="typeName" style="margin-bottom: 10px">
                         <br>
-                        <label> Weak Against </label> <input type="text" name="weakAgainst">
+                        <label> Weak Against </label> <input type="text" name="weakAgainst" style="margin-bottom: 10px">
                         <br>
-                        <label> Strong Against </label> <input type="text" name="strongAgainst">
+                        <label> Strong Against </label> <input type="text" name="strongAgainst" style="margin-bottom: 10px">
                         <br>
                   </fieldset><p id ="center">
                       <button type="submit" id="addType">Add Type</button>
@@ -173,11 +173,11 @@
                       <input type="hidden" name="typeID" id="updateTypeID" value="1">
                         <label> ID#: </label>  1
                         <br>
-                        <label> Type Name </label> <input type="text" name="typeName">
+                        <label> Type Name </label> <input type="text" name="typeName" style="margin-bottom: 10px">
                         <br>
-                        <label> Weak Against </label> <input type="text" name="weakAgainst">
+                        <label> Weak Against </label> <input type="text" name="weakAgainst" style="margin-bottom: 10px">
                         <br>
-                        <label> Strong Against </label> <input type="text" name="strongAgainst">
+                        <label> Strong Against </label> <input type="text" name="strongAgainst" style="margin-bottom: 10px">
                         <br>
                   </fieldset>
                   <p id = "center">
