--- a/battles.html
+++ b/battles.html
@@ -117,9 +117,9 @@
                 <form method="POST" id="addBattle">
                     <legend><strong>Add Battle</strong></legend>
                       <fieldset class="fields">
-                        <label> Battle Date </label> <input type="date" name="battleDate">
+                        <label> Battle Date </label> <input type="date" name="battleDate" style="margin-bottom: 10px">
                         <br>
-                        <label> Battle Setting </label> <input type="text" name="battleSetting">
+                        <label> Battle Setting </label> <input type="text" name="battleSetting" style="margin-bottom: 10px">
                         <br>
                   </fieldset><p id ="center">
                       <button type="submit" id="addBattle">Add Battle</button>
@@ -135,9 +135,9 @@
                       <input type="hidden" name="battleID" id="updateBattleID" value="1">
                         <label> ID#: </label>  1
                         <br>
-                        <label> Battle Date </label> <input type="date" name="battleDate">
+                        <label> Battle Date </label> <input type="date" name="battleDate" style="margin-bottom: 10px">
                         <br>
-                        <label> Battle Setting </label> <input type="text" name="battleSetting">
+                        <label> Battle Setting </label> <input type="text" name="battleSetting" style="margin-bottom: 10px">
                         <br>
                   </fieldset>
                   <p id = "center">
