added spacing for insert/update forms in Player Battles pageS

--- a/peoplebattles.html
+++ b/peoplebattles.html
@@ -125,7 +125,7 @@
                     <legend><strong>Add Player Battle</strong></legend>
                       <fieldset class="fields">
                         <label> Player 1 </label> 
-                            <select name="people">
+                            <select name="people" style="margin-bottom: 10px">
                                 <option value="0">&nbsp;</option>
                                 <option value="1">Jessie</option>
                                 <option value="2">Misty</option>
@@ -133,7 +133,7 @@
                                 </select>
                         <br>
                         <label> Player 2 </label> 
-                            <select name="people">
+                            <select name="people" style="margin-bottom: 10px">
                                 <option value="0">&nbsp;</option>
                                 <option value="1">Jessie</option>
                                 <option value="2">Misty</option>
@@ -142,10 +142,10 @@
                         <br>
                         <label> Who won the battle? </label> 
                             <br>
-                            <input type="radio" id="player1" name="battleWinner" value="player1">
+                            <input type="radio" id="player1" name="battleWinner" value="player1" style="margin-bottom: 10px;">
                             <label for="battleWinner">Player 1</label>
                             <br>
-                            <input type="radio" id="player2" name="battleWinner" value="player2">
+                            <input type="radio" id="player2" name="battleWinner" value="player2" style="margin-bottom: 10px;">
                             <label for="battleWinner">Player 2</label>
                         <br>
                   </fieldset><p id ="center">
@@ -160,14 +160,14 @@
                     <legend><strong>Update Player Battle</strong></legend>
                     <fieldset class="fields">
                         <label> Player 1 </label> 
-                            <select name="people">
+                            <select name="people" style="margin-bottom: 10px">
                                 <option value="0">Jessie</option>
                                 <option value="1">Misty</option>
                                 <option value="2">Ash</option>
                                 </select>
                         <br>
                         <label> Player 2 </label> 
-                            <select name="people">
+                            <select name="people" style="margin-bottom: 10px">
                                 <option value="0">Misty</option>
                                 <option value="1">Jessie</option>
                                 <option value="2">Ash</option>
@@ -175,10 +175,10 @@
                         <br>
                         <label> Who won the battle? </label> 
                             <br>
-                            <input type="radio" id="player1" name="battleWinner" value="player1">
+                            <input type="radio" id="player1" name="battleWinner" value="player1" style="margin-bottom: 10px">
                             <label for="battleWinner">Player 1</label>
                             <br>
-                            <input type="radio" id="player2" name="battleWinner" value="player2">
+                            <input type="radio" id="player2" name="battleWinner" value="player2" style="margin-bottom: 10px">
                             <label for="battleWinner">Player 2</label>
                         <br>
                   </fieldset>
